package app.daos;

import app.entity.User;
import app.persistence.IDAO;
import jakarta.persistence.*;

import java.util.HashSet;
import java.util.Set;

public class UserDAO implements IDAO<User> {

    private final EntityManagerFactory emf;

    public UserDAO(EntityManagerFactory emf){
        if(emf == null) throw new IllegalArgumentException("EntityManagerFactory cannot be null");
        this.emf = emf;
    }

    @Override
    public User create(User u) {
        try (EntityManager em = emf.createEntityManager()) {
            em.getTransaction().begin();
            em.persist(u);
            em.getTransaction().commit();
            return u;
        }
    }

    public User findByEmail(String email) {
        try (EntityManager em = emf.createEntityManager()) {
            try {
                return em.createQuery("SELECT u FROM User u WHERE u.email = :email", User.class)
                        .setParameter("email", email)
                        .getSingleResult();
            } catch (NoResultException e) {
                throw new EntityNotFoundException("No entity found with this email: " + email);
            }
        }
    }

    @Override
    public User getByID(Long id) {
        try(EntityManager em = emf.createEntityManager()) {
            User user = em.find(User.class, id);
            if (user == null)
                throw new EntityNotFoundException("No entity found with id: " + id);
            return user;
        }
    }

    public User getByIDWithRegistrations(Long id) {
        try (EntityManager em = emf.createEntityManager()) {
            try {
                return em.createQuery(
                                "SELECT DISTINCT u FROM User u " +
                                        "LEFT JOIN FETCH u.registrationlist " +
                                        "WHERE u.id = :id",
                                User.class)
                        .setParameter("id", id)
                        .getSingleResult();
            } catch (NoResultException e) {
                throw new EntityNotFoundException("No entity found with id: " + id);
            }
        }
    }

    @Override
    public User update(User u) {
        try(EntityManager em = emf.createEntityManager()){
            User foundUser = em.find(User.class, u.getId());
            if(foundUser == null)
                throw new EntityNotFoundException("No entity found with id: "+ u.getId());
            em.getTransaction().begin();
            User user = em.merge(u);
            em.getTransaction().commit();
            return user;
        }
    }

    @Override
    public Long delete(User u) {
        try(EntityManager em = emf.createEntityManager()){
            User user = em.find(User.class, u.getId());
            if(user == null)
                throw new EntityNotFoundException("No entity found with id: "+ u.getId());
            em.getTransaction().begin();

            em.createQuery("DELETE FROM ProductRegistration pr WHERE pr.owner.id = :id")
                            .setParameter("id", u.getId()).executeUpdate();

            em.createQuery("DELETE FROM Receipt r WHERE r.registration.owner.id = :id")
                    .setParameter("id", u.getId()).executeUpdate();

            em.createQuery("DELETE FROM Product p WHERE p.owner.id = :id")
                    .setParameter("id", u.getId()).executeUpdate();

            em.createQuery("DELETE FROM Warranty w WHERE w.product.owner.id = :id")
                    .setParameter("id", u.getId()).executeUpdate();

            em.clear();
            User managedUser = em.find(User.class, u.getId());
            Long id = managedUser.getId();
            em.remove(managedUser);
            em.getTransaction().commit();
            return id;
        }
    }

    @Override
    public Set<User> get() {
        try(EntityManager em = emf.createEntityManager()){
            return new HashSet(em.createQuery("SELECT u FROM User u").getResultList());
        }
    }
}
